Add containers info and modify parameters. Add new params.

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -60,6 +60,9 @@ params {
     // PATH to TransPi installation
         pipeInstall
 
+    // PATH to conda installation from precheck. Leave blank is precheck was not used or you will use comntainers
+        myCondaInstall = ""
+
     // Directory for reads
         reads=""
 
@@ -144,6 +147,22 @@ params {
 
     // Skip Report
         skipReport = false
+
+    // These options will chnage how the profiles work.
+        // Run with conda installed by the precheck
+            myConda = false
+            condaActivate = false
+
+        // TransPi container with all programs
+            oneContainer = false
+
+        // Cache directory for conda and singularity files. Leave in blank if not sure
+            envCacheDir = ""
+
+        // Singularity
+        // Use singularity image created after pulling from docker and not from Galaxy depot (singularity image ready to use).
+            singularity_pull_docker_container = false
+
 }
 
 /*
@@ -155,8 +174,6 @@ params {
 */
 
 process {
-    executor='slurm'
-    clusterOptions='-p lemmium --qos=low'
     cpus='1'
     memory='5 GB'
     withLabel: big_cpus {
@@ -193,19 +210,10 @@ process {
     errorStrategy='finish'
 }
 
-executor {
-  $slurm {
-    queueSize=100
-  }
-
-  $local {
-    cpus='8'
-    memory='32 GB'
-  }
-}
-
 // env Evidential Gene variable (only for nextflow)
 env.evi="$baseDir/scripts/evigene"
+
+process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 timeline {
   enabled = true
@@ -224,20 +232,47 @@ dag {
   file = "${params.outdir}/${params.tracedir}/transpi_dag.html"
 }
 
+// Get PATH for cache environments
+params.localCacheDir = (params.envCacheDir ? "${params.envCacheDir}" : "${launchDir}")
+
 profiles {
     conda {
-        process.conda = "$baseDir/transpi_env.yml"
+        params.condaActivate = true
+        params.localConda="${params.myCondaInstall}"
+        // cache for condaEnv created individually
+        conda.cacheDir = "${params.localCacheDir}/condaEnv/"
     }
     docker {
         docker.enabled = true
+        docker.runOptions = '-u \$(id -u):\$(id -g)'
     }
     singularity {
         singularity.enabled = true
         singularity.autoMounts = true
+        // cache for images from docker pull
+        singularity.cacheDir="${params.localCacheDir}/singularityCache/"
     }
     test {
         includeConfig 'conf/test.config'
     }
+    TransPiContainer {
+        process {
+            params.oneContainer = true
+            params.TPcontainer="rerv/transpi:v1.0"
+        }
+    }
+    palmuc {
+        process {
+            executor='slurm'
+            clusterOptions='-p lemmium --qos=low'
+        }
+    }
+}
+
+executor {
+  $slurm {
+    queueSize=100
+  }
 }
 
 manifest {
