Add filter rRNA params

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -163,6 +163,10 @@ params {
         // Use singularity image created after pulling from docker and not from Galaxy depot (singularity image ready to use).
             singularity_pull_docker_container = false
 
+    // Filter rRNA
+        rRNAfilter = false
+        // rRNA database
+        rnaDB = ""
 }
 
 /*
