Add PATH of reads

--- a/conf/test.config
+++ b/conf/test.config
@@ -8,11 +8,7 @@
 */
 
 params {
-
-    cpus='4'
-    memory='16 Gb'
-    // As an example. Need to modify the files.
     readsTest = [
-        ['NAME_HERE', ['https://www.dropbox.com/s/0ixhtrwibt5yln1/stru_depth.fasta'], ['https://github.com/nf-core/test-datasets/raw/rnaseq/testdata/SRR4238355_subsamp.fastq.gz']]
+        ['Sponge_sample', ['https://github.com/rivera10/test_dataset/raw/master/RNA_data/Tethya_wilhelma_R1.fastq.gz'], ['https://github.com/rivera10/test_dataset/raw/master/RNA_data/Tethya_wilhelma_R2.fastq.gz']]
     ]
 }
