Add new parameters

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -44,11 +44,11 @@ params {
 
     // PATH for rnammer, tmhmm, signalp programs. Requires licenses. See CBS-DTU tools for information.
         // RNAmmer
-            rnam
+            rnam = ""
         // Tmhmm
-            tmhmm
+            tmhmm = ""
         // SignalP
-            signalp
+            signalp = ""
 
     /*
     // ------------------------------------     STOP     ------------------------------------ //
@@ -99,6 +99,9 @@ params {
     // Only annotation analysis
         onlyAnn = false
 
+    // Skip normalization of reads
+        skipNormalization = false
+
     // Annotation options
     // SignalP
         withSignalP = false
@@ -145,6 +148,9 @@ params {
     // Mininmum percentage of assemblers require to rescue a BUSCO sequence
         minPerc="0.7"
 
+    // Skip Kegg pathway search
+        skipKegg = false
+
     // Skip Report
         skipReport = false
 
@@ -167,6 +173,12 @@ params {
         rRNAfilter = false
         // rRNA database
         rnaDB = ""
+
+    // Save reads from filtering and normalization
+        saveReads = false
+
+    // Get software versions
+        getVersions = false
 }
 
 /*
@@ -272,6 +284,9 @@ profiles {
         }
     }
 }
+
+// Temp BUSCO V4 container for oneContainer option.
+params.v4container="quay.io/biocontainers/busco:4.0.5--pyr36_0"
 
 executor {
   $slurm {
