Change parameter name

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -172,7 +172,7 @@ params {
     // Filter rRNA
         rRNAfilter = false
         // rRNA database
-        rnaDB = ""
+        rRNAdb = ""
 
     // Save reads from filtering and normalization
         saveReads = false
