Change parameter name

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -61,7 +61,7 @@ params {
         pipeInstall
 
     // PATH to conda installation from precheck. Leave blank is precheck was not used or you will use comntainers
-        myCondaInstall = ""
+        myCondaInstall
 
     // Directory for reads
         reads=""
@@ -214,7 +214,6 @@ process {
     }
     withLabel: med_mem {
         cpus='15'
-        //memory='250 GB'
         memory={ 100.Gb + (task.attempt * 50.Gb)}
         errorStrategy={ task.exitStatus in 137..140 ? 'retry' : 'finish' }
         maxRetries = 2
@@ -298,5 +297,5 @@ manifest {
     description = 'Transcriptome Analysis Pipeline'
     mainScript = 'TransPi.nf'
     nextflowVersion = '>=20.07.0'
-    version = '1.0'
+    version = '1.0.0'
 }
