--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -61,7 +61,7 @@ params {
         pipeInstall
 
     // PATH to conda installation from precheck. Leave blank is precheck was not used or you will use comntainers
-        myCondaInstall
+        myCondaInstall=""
 
     // Directory for reads
         reads=""
