Use container from ezlab

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -283,7 +283,7 @@ profiles {
 }
 
 // Temp BUSCO V4 container for oneContainer option.
-params.v4container="quay.io/biocontainers/busco:4.0.5--pyr36_0"
+params.v4container="ezlabgva/busco:v4.0.5_cv1" //"quay.io/biocontainers/busco:4.0.5--pyr36_0"
 
 executor {
   $slurm {
