Change parameter name. Add nerw out channel

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -101,6 +101,9 @@ params {
 
     // Skip normalization of reads
         skipNormalization = false
+        // Normalization parameters 
+        normMaxCov=100
+        normMinCov=1
 
     // Annotation options
     // SignalP
