--- a/conf/test.config
+++ b/conf/test.config
@@ -11,4 +11,7 @@ params {
     readsTest = [
         ['Sponge_sample', ['https://github.com/rivera10/test_dataset/raw/master/RNA_data/Tethya_wilhelma_R1.fastq.gz'], ['https://github.com/rivera10/test_dataset/raw/master/RNA_data/Tethya_wilhelma_R2.fastq.gz']]
     ]
+    k="25,53"
+    maxReadLen=100
+    shortTransdecoder = true
 }
