Restructure order like in processes. Add saveBam option.

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -51,10 +51,25 @@ params {
             signalp = ""
 
     /*
-    // ------------------------------------     STOP     ------------------------------------ //
-    // ---------------------- Do not modify variables below this line. ---------------------- //
-    // ------------------------- Proceed to modify processes at end ------------------------- //
-    // -------------------------------        If nedded       ------------------------------- //
+    // ------------------------------------------------     STOP     ------------------------------------------------ //
+
+        Most of these values below are filled by the precheck script (e.g. PATH to databases or conda installation).
+        However, if you run the precheck for a container you will not have all these PATHs assigned (e.g. conda PATH).
+        Run the precehck again but selecting conda instead of containers if that is the case.
+
+
+        For other options (e.g. filtering, buscoDist, etc.) is recommended to call them from the command line.
+
+
+        Proceed to the end of this config file to modify the processes CPUs and RAM with the specs of your system.
+        Also to modify the profiles if you use a scheduler manager like SLURM or PBS.
+
+
+        More info at the TransPi repository (https://github.com/PalMuc/TransPi) and
+        manual (https://palmuc.github.io/TransPi/).
+
+
+    // -------------------------------------------------------------------------------------------------------------- //
     */
 
     // PATH to TransPi installation
@@ -65,9 +80,6 @@ params {
 
     //busco4 conda env
         cenv=""
-
-    // Directory for reads
-        reads=""
 
     // Uniprot database PATH
         uniprot
@@ -86,6 +98,9 @@ params {
     //Trinotate sqlite created when installing Trinotate
         Tsql
 
+    // Directory for reads
+        reads=""
+
     // Pipeline options
         help = false
         fullHelp = false
@@ -99,30 +114,8 @@ params {
     // Only annotation analysis
         onlyAnn = false
 
-    // Skip normalization of reads
-        skipNormalization = false
-        // Normalization parameters
-        normMaxCov=100
-        normMinCov=1
-
-    // Annotation options
-    // SignalP
-        withSignalP = false
-    // tmHMM
-        withTMHMM = false
-    // rnammer
-        withRnammer = false
-
     // Only Assemblies and Evidential Gene
         onlyAsm = false
-    // Skip Evidential Gene for onlyAsm option
-        skipEvi = false
-
-    //Test data
-        readsTest = false
-
-    //short Transdecoder, no homlogy search PFAM and UniProt
-        shortTransdecoder = false
 
     // Skip quality control
         skipQC = false
@@ -131,6 +124,23 @@ params {
         skipFilter = false
     // Minimum reads quality for filtering in fastp
         minQual="25"
+
+    // Filter rRNA
+        rRNAfilter = false
+        // rRNA database
+        rRNAdb = ""
+
+    // Skip normalization of reads
+        skipNormalization = false
+        // Normalization parameters
+        normMaxCov=100
+        normMinCov=1
+
+    // Save reads from filtering and normalization
+        saveReads = false
+
+    // Save bam file from mapping step
+        saveBam = false
 
     // Filter Species using psytrans
         filterSpecies = false
@@ -147,9 +157,25 @@ params {
     // BUSCO distribution analysis (this option needs to be run together with the allBuscos option)
         // Generate the analysis
         buscoDist = false
-
-    // Mininmum percentage of assemblers require to rescue a BUSCO sequence
+        // Mininmum percentage of assemblers require to rescue a BUSCO sequence
         minPerc="0.7"
+
+    //short Transdecoder, no homlogy search PFAM and UniProt
+        shortTransdecoder = false
+
+    // Annotation options
+    // SignalP
+        withSignalP = false
+    // tmHMM
+        withTMHMM = false
+    // rnammer
+        withRnammer = false
+
+    //Test data
+        readsTest = false
+
+    // Skip Evidential Gene for onlyAsm option
+        skipEvi = false
 
     // Skip Kegg pathway search
         skipKegg = false
@@ -172,24 +198,25 @@ params {
         // Use singularity image created after pulling from docker and not from Galaxy depot (singularity image ready to use).
             singularity_pull_docker_container = false
 
-    // Filter rRNA
-        rRNAfilter = false
-        // rRNA database
-        rRNAdb = ""
-
-    // Save reads from filtering and normalization
-        saveReads = false
-
-    // Get software versions
+    // Get software versions - only works with local conda installation and TransPi container.
         getVersions = false
 }
 
 /*
-    Proceed to modify processes if needed. Choose the scheduler and options:
-        Executor = SLURM, PBS, etc.
-        Cluster Options = Partition, Nodes, Priority, etc.
-    If running locally leave the comments on "executor" and "clusterOptions".
-    For more info see the README and/or Nextflow documentation.
+// ------------------------------------------------     NOTE     ------------------------------------------------ //
+
+
+    Proceed to modify the processes CPUs and RAM with the specs of your system.
+    Also to modify the profiles if you use a scheduler manager like SLURM or PBS.
+
+
+    More info at the TransPi repository (https://github.com/PalMuc/TransPi) and
+    manual (https://palmuc.github.io/TransPi/).
+
+    Also see Nextflow documentation (https://www.nextflow.io/docs/latest/index.html).
+
+
+// -------------------------------------------------------------------------------------------------------------- //
 */
 
 process {
@@ -228,29 +255,6 @@ process {
     errorStrategy='finish'
 }
 
-// env Evidential Gene variable (only for nextflow)
-env.evi="$baseDir/scripts/evigene"
-
-timeline {
-  enabled = true
-  file = "${params.outdir}/${params.tracedir}/transpi_timeline.html"
-}
-report {
-  enabled = true
-  file = "${params.outdir}/${params.tracedir}/transpi_report.html"
-}
-trace {
-  enabled = true
-  file = "${params.outdir}/${params.tracedir}/transpi_trace.txt"
-}
-dag {
-  enabled = true
-  file = "${params.outdir}/${params.tracedir}/transpi_dag.html"
-}
-
-// Get PATH for cache environments
-params.localCacheDir = (params.envCacheDir ? "${params.envCacheDir}" : "${launchDir}")
-
 profiles {
     conda {
         params.condaActivate = true
@@ -285,13 +289,36 @@ profiles {
     }
 }
 
-// Temp BUSCO V4 container for oneContainer option.
-params.v4container="ezlabgva/busco:v4.0.5_cv1" //"quay.io/biocontainers/busco:4.0.5--pyr36_0"
-
 executor {
   $slurm {
     queueSize=100
   }
+}
+
+// env Evidential Gene variable (only for nextflow)
+env.evi="$baseDir/scripts/evigene"
+
+// Temp BUSCO V4 container for oneContainer option.
+params.v4container="ezlabgva/busco:v4.0.5_cv1"
+
+// Get PATH for cache environments
+params.localCacheDir = (params.envCacheDir ? "${params.envCacheDir}" : "${launchDir}")
+
+timeline {
+  enabled = true
+  file = "${params.outdir}/${params.tracedir}/transpi_timeline.html"
+}
+report {
+  enabled = true
+  file = "${params.outdir}/${params.tracedir}/transpi_report.html"
+}
+trace {
+  enabled = true
+  file = "${params.outdir}/${params.tracedir}/transpi_trace.txt"
+}
+dag {
+  enabled = true
+  file = "${params.outdir}/${params.tracedir}/transpi_dag.html"
 }
 
 manifest {
@@ -300,5 +327,5 @@ manifest {
     description = 'Transcriptome Analysis Pipeline'
     mainScript = 'TransPi.nf'
     nextflowVersion = '>=20.07.0'
-    version = '1.0.0'
+    version = '1.0.0-dev'
 }
