Use projectDir instead of baseDir

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -72,7 +72,7 @@ params {
     // -------------------------------------------------------------------------------------------------------------- //
     */
 
-    // PATH to TransPi installation
+    // PATH to TransPi DBs installation
         pipeInstall
 
     // PATH to conda installation from precheck. Leave blank is precheck was not used or you will use comntainers
@@ -296,7 +296,7 @@ executor {
 }
 
 // env Evidential Gene variable (only for nextflow)
-env.evi="$baseDir/scripts/evigene"
+env.evi="${projectDir}/scripts/evigene"
 
 // Temp BUSCO V4 container for oneContainer option.
 params.v4container="ezlabgva/busco:v4.0.5_cv1"
@@ -326,6 +326,6 @@ manifest {
     author = 'Ramón E. Rivera-Vicéns'
     description = 'Transcriptome Analysis Pipeline'
     mainScript = 'TransPi.nf'
-    nextflowVersion = '>=20.07.0'
+    nextflowVersion = '>=20.10.0'
     version = '1.0.0-dev'
 }
