--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -75,7 +75,7 @@ params {
     // PATH to TransPi DBs installation
         pipeInstall
 
-    // PATH to conda installation from precheck. Leave blank is precheck was not used or you will use comntainers
+    // PATH to conda installation from precheck. Leave blank is precheck was not used or you will use containers
         myCondaInstall=""
 
     //busco4 conda env
