--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -199,7 +199,7 @@ params {
             singularity_pull_docker_container = false
 
     // Get software versions - only works with local conda installation and TransPi container.
-        getVersions = false
+        skipGetRunInfo = false
 }
 
 /*
@@ -255,6 +255,15 @@ process {
     errorStrategy='finish'
 }
 
+// env Evidential Gene variable (only for nextflow)
+env.evi="${projectDir}/scripts/evigene"
+
+// Temp BUSCO V4 container for oneContainer option.
+params.v4container="ezlabgva/busco:v4.0.5_cv1"
+
+// Get PATH for cache environments
+params.localCacheDir = (params.envCacheDir ? "${params.envCacheDir}" : "${launchDir}")
+
 profiles {
     conda {
         params.condaActivate = true
@@ -294,15 +303,6 @@ executor {
     queueSize=100
   }
 }
-
-// env Evidential Gene variable (only for nextflow)
-env.evi="${projectDir}/scripts/evigene"
-
-// Temp BUSCO V4 container for oneContainer option.
-params.v4container="ezlabgva/busco:v4.0.5_cv1"
-
-// Get PATH for cache environments
-params.localCacheDir = (params.envCacheDir ? "${params.envCacheDir}" : "${launchDir}")
 
 timeline {
   enabled = true
