Add annotation option

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -169,6 +169,8 @@ params {
         withTMHMM = false
     // rnammer
         withRnammer = false
+    // Add annotation to file
+        addAnnotation = false
 
     //Test data
         readsTest = false
@@ -182,7 +184,7 @@ params {
     // Skip Report
         skipReport = false
 
-    // These options will chnage how the profiles work.
+    // These options will change how the profiles work.
         // Run with conda installed by the precheck
             myConda = false
             condaActivate = false
