--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -328,5 +328,5 @@ manifest {
     description = 'Transcriptome Analysis Pipeline'
     mainScript = 'TransPi.nf'
     nextflowVersion = '>=20.10.0'
-    version = '1.0.0-dev'
+    version = '1.1.0-rc'
 }
