Add docker mount for DBs

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -274,7 +274,8 @@ profiles {
     }
     docker {
         docker.enabled = true
-        docker.runOptions = '-u \$(id -u):\$(id -g)'
+        docker.runOptions = "-u \$(id -u):\$(id -g) -v ${params.pipeInstall}:${params.pipeInstall}"
+        // --mount type=bind,src=${params.pipeInstall},dst=/dockerDB"
     }
     singularity {
         singularity.enabled = true
