Add genetic code option (#24)

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -159,8 +159,10 @@ params {
         // Mininmum percentage of assemblers require to rescue a BUSCO sequence
         minPerc="0.7"
 
-    //short Transdecoder, no homlogy search PFAM and UniProt
+    //short Transdecoder, no homlogy search (PFAM and UniProt)
         shortTransdecoder = false
+    //Transdecoder genetic code
+        genCode="Universal"
 
     // Annotation options
     // SignalP
