Add note and missing parameter

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -182,7 +182,10 @@ params {
 
     // These options will change how the profiles work.
         // Run with conda installed by the precheck
-            myConda = false
+            //next 2 parameters are outdated
+                myConda = false
+                myCondaInstall=""
+                
             condaActivate = false
 
         // TransPi container with all programs
@@ -254,9 +257,6 @@ process {
 
 // env Evidential Gene variable (only for nextflow)
 env.evi="${projectDir}/scripts/evigene"
-
-// Temp BUSCO V4 container for oneContainer option.
-params.v4container="ezlabgva/busco:v4.0.5_cv1"
 
 // Get PATH for cache environments
 params.localCacheDir = (params.envCacheDir ? "${params.envCacheDir}" : "${launchDir}")
