Change kegg option

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -174,8 +174,8 @@ params {
     // Skip Evidential Gene for onlyAsm option
         skipEvi = false
 
-    // Skip Kegg pathway search
-        skipKegg = false
+    // Kegg pathway search
+        withKegg = false
 
     // Skip Report
         skipReport = false
